[package]
name = "driveshaft"
version = "0.2.0"
description = "A minimal, high-performance thread pool for running synchronous tasks with per-thread context from async code."
authors = ["Charlie Gallagher"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/ctgallagher4/driveshaft"

[dependencies]
core_affinity = "0.8.3"
crossbeam = "^0.8.0"
thiserror = { version = "^2.0.0" }
tokio = { version = "1.0", features = ["rt", "macros", "sync"] }
